--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -3,14 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
         android:id="@+id/home_sight_image"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:scaleType="fitXY"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -19,15 +20,17 @@
         android:layout_alignLeft="@+id/home_sight_image"
         android:layout_alignStart="@+id/home_sight_image"
         android:textSize="27sp"
-        android:gravity="center"/>
+        android:gravity="center"
+        style="@style/TextBoundary"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:id="@+id/home_sight_name"
         android:layout_alignRight="@+id/home_sight_image"
         android:layout_alignEnd="@+id/home_sight_image"
-        android:textSize="38sp"
-        android:gravity="center"/>
+        android:textSize="36sp"
+        android:gravity="center"
+        style="@style/TextBoundary"/>
     <Button
         android:layout_width="100dp"
         android:layout_height="50dp"
@@ -35,7 +38,7 @@
         android:text="담기"
         android:layout_alignBottom="@+id/home_sight_image"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +47,8 @@
         android:textSize="20sp"
         android:layout_above="@+id/home_rating_bar"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        style="@style/TextBoundary"/>
 
     <Button
         android:layout_width="35dp"
@@ -55,7 +59,8 @@
         android:layout_toLeftOf="@id/home_recommend_count"
         android:layout_toStartOf="@id/home_recommend_count"
         android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp" />
+        android:layout_marginEnd="10dp"
+        android:textStyle="bold"/>
 
     <RatingBar
         android:layout_width="wrap_content"
@@ -66,7 +71,7 @@
         android:layout_toRightOf="@+id/btn_home_get_bucket"
         android:layout_toEndOf="@+id/btn_home_get_bucket"
         android:layout_marginLeft="22dp"
-        android:layout_marginStart="22dp" />
+        android:layout_marginStart="22dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -76,7 +81,8 @@
         android:textSize="18sp"
         android:layout_alignBottom="@+id/home_sight_image"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        style="@style/TextBoundary"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -86,6 +92,7 @@
         android:textSize="18sp"
         android:layout_alignBottom="@+id/home_sight_image"
         android:layout_toRightOf="@+id/home_rating_bar"
-        android:layout_toEndOf="@+id/home_rating_bar"/>
+        android:layout_toEndOf="@+id/home_rating_bar"
+        style="@style/TextBoundary"/>
 
 </RelativeLayout>
