--- a/app/src/main/res/layout/detail_header.xml
+++ b/app/src/main/res/layout/detail_header.xml
@@ -62,7 +62,8 @@
             android:layout_height="match_parent"
             android:id="@+id/detail_subimage_layout"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:background="@drawable/detail_border">
         </LinearLayout>
     </HorizontalScrollView>
 
@@ -154,6 +155,25 @@
             android:layout_marginBottom="15dp"/>
 
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:weightSum="1"
+        android:background="@drawable/detail_border">
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="@string/detail_put_bucket"
+            android:layout_weight="0.5"
+            android:id="@+id/detail_put_bucket"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="@string/detail_put_planner"
+            android:layout_weight="0.5"
+            android:id="@+id/detail_put_planner" />
+
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -162,7 +182,8 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/detail_border">
 
     </RelativeLayout>
 
