--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -30,15 +30,9 @@
         android:layout_alignEnd="@+id/home_sight_image"
         android:textSize="36sp"
         android:gravity="center"
-        style="@style/TextBoundary"/>
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:id="@+id/btn_home_get_bucket"
-        android:text="담기"
-        android:layout_alignBottom="@+id/home_sight_image"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        style="@style/TextBoundary"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,7 +42,9 @@
         android:layout_above="@+id/home_rating_bar"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        style="@style/TextBoundary"/>
+        style="@style/TextBoundary"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"/>
 
     <Button
         android:layout_width="35dp"
@@ -68,10 +64,10 @@
         android:id="@+id/home_rating_bar"
         style="?android:attr/ratingBarStyleIndicator"
         android:layout_alignBottom="@+id/home_sight_image"
-        android:layout_toRightOf="@+id/btn_home_get_bucket"
-        android:layout_toEndOf="@+id/btn_home_get_bucket"
-        android:layout_marginLeft="22dp"
-        android:layout_marginStart="22dp"/>
+        android:layout_toLeftOf="@+id/home_rating_current_point"
+        android:layout_toStartOf="@+id/home_rating_current_point"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -82,6 +78,8 @@
         android:layout_alignBottom="@+id/home_sight_image"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         style="@style/TextBoundary"/>
 
     <TextView
@@ -91,8 +89,10 @@
         android:text="@string/detail_default_point"
         android:textSize="18sp"
         android:layout_alignBottom="@+id/home_sight_image"
-        android:layout_toRightOf="@+id/home_rating_bar"
-        android:layout_toEndOf="@+id/home_rating_bar"
+        android:layout_toLeftOf="@+id/home_rating_max_point"
+        android:layout_toStartOf="@+id/home_rating_max_point"
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         style="@style/TextBoundary"/>
 
 </RelativeLayout>
