--- a/app/src/main/res/layout/bucket_list_item.xml
+++ b/app/src/main/res/layout/bucket_list_item.xml
@@ -18,13 +18,15 @@
 
     <ImageView
         android:id="@+id/bucket_list_image"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/bucket_list_name"
